20191106work